master. used repository method for getting resource